tdf#160170 sw: fix overshrunk justified lines at hyphenation

Smart justify uses 2 SwTextGuess::Guess() calls to break a
line, but using the same SwTextGuess object resulted overshrunk
lines, if the first call resulted hyphenation, because of the
bad state of the object for the second call. If we need a
second call, now instantiate a new object for it.

Regression from commit 36bfc86e27fa03ee16f87819549ab126c5a68cac
"tdf#119908 tdf#158776 sw smart justify: shrink only spaces".

Note: the reported test document was already fixed by
commit f050103c3324d878b310f37429ea3580a8230905
"stale hyphenation data after skipping blanks".

Change-Id: I478407dc7650206d3feb72d5b89e78b1194590c1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168693
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: Jenkins